--- a/collab-system-fe/index.html
+++ b/collab-system-fe/index.html
@@ -327,27 +327,24 @@
                         <div class="topbar-divider d-none d-sm-block"></div>
 
                         <!-- Nav Item - User Information -->
-                        <li class="nav-item dropdown no-arrow">
+                        <li id="guestMenu" class="nav-item d-none">
+                            <a class="nav-link" href="login.html">Login</a>
+                        </li>
+                        <li id="guestMenu2" class="nav-item d-none">
+                            <a class="nav-link" href="register.html">Register</a>
+                        </li>
+
+                        <li id="userMenu" class="nav-item dropdown no-arrow d-none">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span id="navUserEmail" class="mr-2 d-none d-lg-inline text-gray-600 small">Guest</span>
-                                <img class="img-profile rounded-circle"
-                                    src="img/undraw_profile.svg">
+                                <img class="img-profile rounded-circle" src="img/undraw_profile.svg">
                             </a>
-                            <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
                                 <a class="dropdown-item" href="#">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Profile
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Settings
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Activity Log
                                 </a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
@@ -371,7 +368,6 @@
                         <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                                 class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
                     </div>
-
                     <!-- Content Row -->
                     <div class="row">
 
@@ -458,6 +454,23 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="card shadow mb-4 mt-4">
+                        <div class="card-header py-3 d-flex justify-content-between align-items-center">
+                            <h6 class="m-0 font-weight-bold text-primary">My Projects</h6>
+                            <button id="createProjectBtn" class="btn btn-sm btn-primary">
+                                + Create Project
+                            </button>
+                        </div>
+
+                        <div class="card-body">
+                            <div id="projectList">
+                                <!-- JS will render your project cards here -->
+                            </div>
+                        </div>
+                    </div>
+
+                    
 
                     <!-- Content Row -->
 
@@ -737,6 +750,40 @@
         </div>
     </div>
 
+    <div class="modal fade" id="createProjectModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      
+      <div class="modal-header">
+        <h5 class="modal-title">Create Project</h5>
+        <button class="close" type="button" data-dismiss="modal">
+          <span>×</span>
+        </button>
+      </div>
+
+      <div class="modal-body">
+        <form id="createProjectForm">
+          <div class="form-group">
+            <label>Project Name</label>
+            <input type="text" id="projectName" class="form-control" placeholder="Enter project title" required />
+          </div>
+
+          <div class="form-group mt-3">
+            <label>Description (optional)</label>
+            <textarea id="projectDescription" class="form-control" placeholder="Description"></textarea>
+          </div>
+        </form>
+      </div>
+
+      <div class="modal-footer">
+        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+        <button id="createProjectSubmit" class="btn btn-primary">Create</button>
+      </div>
+
+    </div>
+  </div>
+</div>
+
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -755,6 +802,7 @@
     <script src="js/demo/chart-pie-demo.js"></script>
 
     <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/pages/project/project.js"></script>
 
 </body>
 </html>
