--- a/collab-system-fe/register.html
+++ b/collab-system-fe/register.html
@@ -57,6 +57,6 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script type="module" src="js/register.js"></script>
+  <script type="module" src="js/pages/auth/register.js"></script>
 </body>
 </html>
