--- a/collab-system-fe/project.html
+++ b/collab-system-fe/project.html
@@ -48,6 +48,11 @@
     <div class="d-flex justify-content-between align-items-center mb-2">
       <h3 id="projectTitle">Project: <span id="projectName"></span></h3>
       <div>
+        <button id="viewMembersBtn" class="btn btn-sm btn-light border mr-2">
+          <i class="fas fa-users text-primary"></i>
+          <span id="memberCountBadge">0 Members</span>
+        </button>
+        <button id="inviteBtn" class="btn btn-sm btn-info">Invite Members</button>
         <button id="saveDocBtn" class="btn btn-sm btn-success">Save</button>
         <button id="createDocBtn" class="btn btn-sm btn-primary">New Document</button>
       </div>
@@ -90,6 +95,54 @@
       </div>
     </div>
   </div>
+
+  <!-- Invite members modal -->
+  <div class="modal fade" id="inviteModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Invite to Project</h5>
+          <button type="button" class="close" data-dismiss="modal">
+            <span>&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="inviteEmail">Email Address</label>
+            <input type="email" id="inviteEmail" class="form-control" placeholder="Enter email address" />
+          </div>
+          <div class="form-group">
+            <label for="inviteRole">Role</label>
+            <select id="inviteRole" class="form-control">
+              <option value="editor">Editor</option>
+              <option value="viewer">Viewer</option>
+            </select>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button id="inviteSubmit" class="btn btn-primary">Send Invitation</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="projectMembersModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Project Team</h5>
+        <button type="button" class="close" data-dismiss="modal">
+          <span>&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div id="projectMembersList" class="list-group">
+            </div>
+      </div>
+    </div>
+  </div>
+</div>
 
   <!-- Socket.IO Client -->
   <script src="/socket.io/socket.io.js"></script>
