message/call feature

--- a/collab-system-fe/index.html
+++ b/collab-system-fe/index.html
@@ -96,9 +96,9 @@
 
         <!-- Team -->
         <li class="nav-item">
-          <a class="nav-link" href="team.html">
+          <a class="nav-link" href="chat.html">
             <i class="fas fa-fw fa-users"></i>
-            <span>Team</span>
+            <span>Chat</span>
           </a>
         </li>
         <hr class="sidebar-divider d-none d-md-block" />
