--- a/collab-system-fe/project.html
+++ b/collab-system-fe/project.html
@@ -1,18 +1,16 @@
-<!-- project.html - UPDATED -->
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <title>Project Workspace</title>
-    <!-- Required for Bootstrap modals -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link href="css/sb-admin-2.min.css" rel="stylesheet" />
-    <link href="css/quill.snow.css" rel="stylesheet">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css" rel="stylesheet"/>
+    <link href="css/sb-admin-2.min.css" rel="stylesheet"/>
+    <link href="css/quill.snow.css" rel="stylesheet"/>
 
     <style>
       .workspace {
@@ -21,52 +19,66 @@
         gap: 1rem;
         padding: 1rem;
       }
-      #fileList {
+
+      #sidebarWrapper {
         width: 280px;
-        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
         border-right: 1px solid #e5e7eb;
         padding-right: 1rem;
       }
-      #editorWrapper { flex:1; display: flex; flex-direction: column; }
-    #editor-container {
+
+      #fileList {
+        flex: 1;
+        overflow-y: auto;
+        margin-bottom: 1rem;
+      }
+
+      #editorWrapper {
+        flex: 1;
+        display: none; /* <-- HIDDEN BY DEFAULT */
+        flex-direction: column;
+      }
+
+      #noDocPlaceholder {
+        flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #6c757d;
+        font-size: 1.4rem;
+        border: 2px dashed #dee2e6;
+        border-radius: 8px;
+      }
+
+      #editor-container {
         flex: 1;
         font-family: Helvetica, Arial, sans-serif;
         font-size: 16px;
-        height: 100%; 
-    }
+        border: 1px solid #ddd;
+        min-height: 300px;
+      }
+
       .doc-item {
         padding: 0.5rem;
         cursor: pointer;
         border-bottom: 1px solid #f1f1f1;
         position: relative;
       }
-      .doc-item:hover {
-        background: #f8f9fc;
-      }
+      .doc-item:hover { background: #f8f9fc; }
       .doc-item.active {
         background: #e3f2fd;
         border-left: 3px solid #007bff;
       }
+
       .real-time-indicator {
         position: absolute;
         top: 0.5rem;
         right: 0.5rem;
       }
-      .connection-status {
-        padding: 0.25rem 0.5rem;
-        border-radius: 0.25rem;
-        font-size: 0.75rem;
-      }
-      .status-connected {
-        background: #d4edda;
-        color: #155724;
-      }
-      .status-disconnected {
-        background: #f8d7da;
-        color: #721c24;
-      }
     </style>
   </head>
+
   <body>
     <div class="container-fluid mt-3">
       <div class="d-flex justify-content-between align-items-center mb-2">
@@ -76,162 +88,141 @@
             <i class="fas fa-users text-primary"></i>
             <span id="memberCountBadge">0 Members</span>
           </button>
-          <button id="inviteBtn" class="btn btn-sm btn-info">
-            Invite Members
-          </button>
+          <button id="inviteBtn" class="btn btn-sm btn-info">Invite Members</button>
           <button id="saveDocBtn" class="btn btn-sm btn-success">Save</button>
-          <button id="createDocBtn" class="btn btn-sm btn-primary">
-            New Document
-          </button>
+          <button id="createDocBtn" class="btn btn-sm btn-primary">New Document</button>
         </div>
       </div>
 
       <div class="workspace">
-        <div id="fileList">
-          <div class="text-center text-muted">Loading documents...</div>
+
+        <!-- SIDEBAR -->
+        <div id="sidebarWrapper">
+          <div id="fileList">
+            <div class="text-center text-muted">Loading documents...</div>
+          </div>
+
+          <div class="mt-auto border-top pt-3">
+            <button id="backToDashboardBtn" class="btn btn-outline-secondary btn-block shadow-sm">
+              <i class="fas fa-arrow-left mr-2"></i> Back to Dashboard
+            </button>
+          </div>
         </div>
 
+        <!-- PLACEHOLDER (SHOW FIRST) -->
+        <div id="noDocPlaceholder">
+          Choose a document to start editing
+        </div>
+
+        <!-- EDITOR WRAPPER (HIDDEN UNTIL OPEN DOC) -->
         <div id="editorWrapper">
           <div class="d-flex justify-content-between align-items-center mb-2">
             <h5 id="docTitle">Select a document</h5>
             <div id="editorStatus" class="text-muted small">Not connected</div>
           </div>
 
-  <div id="toolbar-container" class="mb-2 ql-toolbar ql-snow">
-    <select class="ql-header"  title="Text Format">
-      <option value= "1"></option>
-      <option value="2"></option>
-      <option value="3"></option>
-      <option selected>Body</option>
-    </select>
-    <select class="ql-size" title="Font Size">
-      <option value="10px"></option>
-      <option value="13px"></option>
-      <option value="16px"></option>
-      <option value="18px"></option>
-      <option value="32px"></option>
-      <option value="48px"></option>
-    </select>
-    <button class="ql-bold" title="Bold (Ctrl+B)"></button>
-    <button class="ql-italic" title="Italic (Ctrl+I)"></button>
-    <button class="ql-underline" title="Underline (Ctrl+U)"></button>
-    <button class="ql-strike" title="Strikethrough"></button>
-    <button class="ql-list" value="ordered" title="Ordered List"></button>
-    <button class="ql-list" value="bullet" title="Bullet List"></button>
-    <button class="ql-indent" value="-1" title="Decrease Indent"></button>
-    <button class="ql-indent" value="+1" title="Increase Indent"></button>
-    <button class="ql-blockquote" title="Blockquote"></button>
-    <button class="ql-code-block" title="Code Block"></button>
-    <button class="ql-link" title="Insert Link (Ctrl + K)"></button>
-    <button class="ql-clean" title="Remove Formatting"></button>
-  </div>
-  <div id="editor-container"
-       style="flex:1; border:1px solid #ddd; min-height:300px;">
-  </div>
+          <div id="toolbar-container" class="mb-2 ql-toolbar ql-snow">
+            <select class="ql-header">
+              <option value="1"></option>
+              <option value="2"></option>
+              <option value="3"></option>
+              <option selected>Body</option>
+            </select>
 
-  <div class="mt-2">
-    <small class="text-muted" id="lastSaved">Last saved: Never</small>
-  </div>
-</div>
-    <!-- Create doc modal -->
-    <div
-      class="modal fade"
-      id="createDocModal"
-      tabindex="-1"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Create Document</h5>
-            <button type="button" class="close" data-dismiss="modal">
-              <span>&times;</span>
-            </button>
+            <select class="ql-size">
+              <option value="10px"></option>
+              <option value="13px"></option>
+              <option value="16px"></option>
+              <option value="18px"></option>
+              <option value="32px"></option>
+              <option value="48px"></option>
+            </select>
+
+            <button class="ql-bold"></button>
+            <button class="ql-italic"></button>
+            <button class="ql-underline"></button>
+            <button class="ql-strike"></button>
+
+            <button class="ql-list" value="ordered"></button>
+            <button class="ql-list" value="bullet"></button>
+
+            <button class="ql-indent" value="-1"></button>
+            <button class="ql-indent" value="+1"></button>
+
+            <button class="ql-blockquote"></button>
+            <button class="ql-code-block"></button>
+            <button class="ql-link"></button>
+
+            <button class="ql-clean"></button>
           </div>
-          <div class="modal-body">
-            <input
-              id="newDocTitle"
-              class="form-control"
-              placeholder="Document title"
-            />
-          </div>
-          <div class="modal-footer">
-            <button class="btn btn-secondary" data-dismiss="modal">
-              Cancel
-            </button>
-            <button id="createDocSubmit" class="btn btn-primary">Create</button>
+
+          <div id="editor-container"></div>
+
+          <div class="mt-2">
+            <small class="text-muted" id="lastSaved">Last saved: Never</small>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Invite members modal -->
-    <div class="modal fade" id="inviteModal" tabindex="-1" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Invite to Project</h5>
-            <button type="button" class="close" data-dismiss="modal">
-              <span>&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="form-group">
-              <label for="inviteEmail">Email Address</label>
-              <input
-                type="email"
-                id="inviteEmail"
-                class="form-control"
-                placeholder="Enter email address"
-              />
-            </div>
-            <div class="form-group">
-              <label for="inviteRole">Role</label>
-              <select id="inviteRole" class="form-control">
-                <option value="editor">Editor</option>
-                <option value="viewer">Viewer</option>
-              </select>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button class="btn btn-secondary" data-dismiss="modal">
-              Cancel
-            </button>
-            <button id="inviteSubmit" class="btn btn-primary">
-              Send Invitation
-            </button>
-          </div>
+    <!-- MODALS (unchanged) -->
+    <div class="modal fade" id="createDocModal" tabindex="-1">
+      <div class="modal-dialog"><div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Create Document</h5>
+          <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
         </div>
-      </div>
+        <div class="modal-body">
+          <input id="newDocTitle" class="form-control" placeholder="Document title"/>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button id="createDocSubmit" class="btn btn-primary">Create</button>
+        </div>
+      </div></div>
     </div>
 
-    <div
-      class="modal fade"
-      id="projectMembersModal"
-      tabindex="-1"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Project Team</h5>
-            <button type="button" class="close" data-dismiss="modal">
-              <span>&times;</span>
-            </button>
+    <div class="modal fade" id="inviteModal" tabindex="-1">
+      <div class="modal-dialog"><div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Invite to Project</h5>
+          <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label>Email Address</label>
+            <input type="email" id="inviteEmail" class="form-control"/>
           </div>
-          <div class="modal-body">
-            <div id="projectMembersList" class="list-group"></div>
+          <div class="form-group">
+            <label>Role</label>
+            <select id="inviteRole" class="form-control">
+              <option value="editor">Editor</option>
+              <option value="viewer">Viewer</option>
+            </select>
           </div>
         </div>
-      </div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button id="inviteSubmit" class="btn btn-primary">Send Invitation</button>
+        </div>
+      </div></div>
     </div>
 
-    <!-- Socket.IO Client -->
+    <div class="modal fade" id="projectMembersModal" tabindex="-1">
+      <div class="modal-dialog"><div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Project Team</h5>
+          <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+        </div>
+        <div class="modal-body">
+          <div id="projectMembersList" class="list-group"></div>
+        </div>
+      </div></div>
+    </div>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-    <script
-      type="module"
-      src="js/pages/project/document/projectWorkspace.js"
-    ></script>
+    <script type="module" src="js/pages/project/document/projectWorkspace.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
   </body>
 </html>
