--- a/collab-system-fe/index.html
+++ b/collab-system-fe/index.html
@@ -458,7 +458,7 @@
     
     <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
 
-    <script type="module" src="js/main.js"></script>
-    <script type="module" src="js/pages/project/project.js"></script>
+    <script type="module" src="js/pages/dashboard/main.js"></script>
+    <script type="module" src="js/pages/dashboard/project.js"></script>
   </body>
 </html>
