--- a/collab-system-fe/project.html
+++ b/collab-system-fe/project.html
@@ -146,16 +146,19 @@
             <div class="text-center text-muted">Loading documents...</div>
           </div>
 
-          <div class="mt-auto border-top pt-3">
-            <button
-              id="backToDashboardBtn"
-              class="btn btn-outline-secondary btn-block shadow-sm"
-            >
-              <i class="fas fa-arrow-left mr-2"></i> Back to Dashboard
-            </button>
-          </div>
-        </div>
+         <div class="mt-auto border-top pt-3">
+              <button id="backToDashboardBtn" class="btn btn-outline-secondary btn-block shadow-sm mb-2">
+                  <i class="fas fa-arrow-left mr-2"></i> Back to Dashboard
+              </button>
 
+              <button id="leaveProjectBtn" class="btn btn-outline-danger btn-block shadow-sm">
+                  <i class="fas fa-sign-out-alt mr-2"></i> Leave Project
+              </button>
+          </div>
+
+
+        </div>
+        
         <!-- PLACEHOLDER (SHOW FIRST) -->
         <div id="noDocPlaceholder">Choose a document to start editing</div>
 
