--- a/collab-system-fe/project.html
+++ b/collab-system-fe/project.html
@@ -20,76 +20,7 @@
     />
     <link href="css/sb-admin-2.min.css" rel="stylesheet" />
     <link href="css/quill.snow.css" rel="stylesheet" />
-    
-
-    <style>
-      .workspace {
-        display: flex;
-        height: calc(100vh - 80px);
-        gap: 1rem;
-        padding: 1rem;
-      }
-
-      #sidebarWrapper {
-        width: 280px;
-        display: flex;
-        flex-direction: column;
-        border-right: 1px solid #e5e7eb;
-        padding-right: 1rem;
-      }
-
-      #fileList {
-        flex: 1;
-        overflow-y: auto;
-        margin-bottom: 1rem;
-      }
-
-      #editorWrapper {
-        flex: 1;
-        display: none; /* <-- HIDDEN BY DEFAULT */
-        flex-direction: column;
-      }
-
-      #noDocPlaceholder {
-        flex: 1;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #6c757d;
-        font-size: 1.4rem;
-        border: 2px dashed #dee2e6;
-        border-radius: 8px;
-      }
-
-      #editor-container {
-        flex: 1;
-        font-family: Helvetica, Arial, sans-serif;
-        font-size: 16px;
-        border: 1px solid #ddd;
-        min-height: 300px;
-      }
-
-      .file-item {
-        padding: 0.5rem;
-        cursor: pointer;
-        border-bottom: 1px solid #f1f1f1;
-        position: relative;
-      }
-      .file-item:hover {
-        background: #f8f9fc;
-      }
-      .file-item.active {
-        background: #e3f2fd;
-        border-left: 3px solid #007bff;
-      }
-
-      .real-time-indicator {
-        position: absolute;
-        top: 0.5rem;
-        right: 0.5rem;
-      }
-      
-    </style>
+    <link href="css/project.css" rel="stylesheet" />
   </head>
 
   <body>
