--- a/collab-system-fe/whiteboard.html
+++ b/collab-system-fe/whiteboard.html
@@ -15,69 +15,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css" rel="stylesheet"/>
     <link href="/css/sb-admin-2.min.css" rel="stylesheet"/>
-
-    <style>
-      .workspace {
-        display: flex;
-        height: calc(100vh - 80px);
-        gap: 1rem;
-        padding: 1rem;
-      }
-
-      #sidebarWrapper {
-        width: 280px;
-        display: flex;
-        flex-direction: column;
-        border-right: 1px solid #e5e7eb;
-        padding-right: 1rem;
-      }
-
-      #boardList {
-        flex: 1;
-        overflow-y: auto;
-        margin-bottom: 1rem;
-      }
-
-      #whiteboardWrapper {
-        flex: 1;
-        display: none;
-        flex-direction: column;
-      }
-
-      #noBoardPlaceholder {
-        flex: 1;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #6c757d;
-        font-size: 1.4rem;
-        border: 2px dashed #dee2e6;
-        border-radius: 8px;
-      }
-
-      #whiteboardCanvas {
-        flex: 1;
-        border: 1px solid #ddd;
-        background: white;
-        border-radius: 6px;
-        cursor: crosshair;
-      }
-
-      .board-item {
-        padding: 0.5rem;
-        cursor: pointer;
-        border-bottom: 1px solid #f1f1f1;
-      }
-
-      .board-item:hover {
-        background: #f8f9fc;
-      }
-
-      .board-item.active {
-        background: #e3f2fd;
-        border-left: 3px solid #007bff;
-      }
-    </style>
+    <link href="/css/whiteboard.css" rel="stylesheet"/>
   </head>
 
   <body>
