--- a/collab-system-fe/index.html
+++ b/collab-system-fe/index.html
@@ -24,29 +24,7 @@
 
     <link href="css/sb-admin-2.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css" rel="stylesheet">
-
-    <style>
-        /* Custom class for 5 columns on large screens (20% width) */
-        @media (min-width: 1200px) {
-            .col-xl-20 {
-                -webkit-box-flex: 0;
-                -ms-flex: 0 0 20%;
-                flex: 0 0 20%;
-                max-width: 20%;
-            }
-        }
-        
-        /* Project Card Hover Effect */
-        .project-card {
-            transition: transform 0.2s, box-shadow 0.2s;
-            cursor: pointer;
-            height: 100%; 
-        }
-        .project-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
-        }
-    </style>
+    <link href="css/index.css" rel="stylesheet">
   </head>
 
   <body id="page-top">
