message center/call consistency

--- a/collab-system-fe/index.html
+++ b/collab-system-fe/index.html
@@ -141,33 +141,17 @@
                   aria-expanded="false"
                 >
                   <i class="fas fa-envelope fa-fw"></i>
-                  <span class="badge badge-danger badge-counter">7</span>
+                  <span id="messagesBadge" class="badge badge-danger badge-counter"">0</span>
                 </a>
                 <div
                   class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                   aria-labelledby="messagesDropdown"
                 >
                   <h6 class="dropdown-header">Message Center</h6>
-                  <a class="dropdown-item d-flex align-items-center" href="#">
-                    <div class="dropdown-list-image mr-3">
-                      <img
-                        class="rounded-circle"
-                        src="img/undraw_profile_1.svg"
-                        alt="..."
-                      />
-                      <div class="status-indicator bg-success"></div>
-                    </div>
-                    <div class="font-weight-bold">
-                      <div class="text-truncate">
-                        Hi there! I am wondering if you can help me with a
-                        problem I've been having.
-                      </div>
-                      <div class="small text-gray-500">Emily Fowler · 58m</div>
-                    </div>
-                  </a>
+                  <div id="messagesDropdownList"></div>
                   <a
                     class="dropdown-item text-center small text-gray-500"
-                    href="#"
+                    href="chat.html"
                     >Read More Messages</a
                   >
                 </div>
@@ -268,10 +252,10 @@
                       <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                           <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                            Messages (24h)
+                            Recent Messages
                           </div>
                           <div class="h4 mb-0 font-weight-bold text-gray-800" id="statMessages">
-                            ...
+                            0
                           </div>
                         </div>
                         <div class="col-auto">
@@ -435,6 +419,7 @@
     <script src="js/sb-admin-2.min.js"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 
     <script type="module" src="js/pages/dashboard/main.js"></script>
   </body>
