--- a/collab-system-fe/call.html
+++ b/collab-system-fe/call.html
@@ -22,11 +22,11 @@
 
     <div class="controls">
         <button class="btn-circle btn-primary" id="cameraBtn" title="Toggle Camera">
-            <i class="fas fa-video"></i>
+            <i id="cameraIcon" class="fas fa-video"></i>
         </button>
 
         <button class="btn-circle btn-mute" id="muteBtn" title="Toggle Mute">
-            <i class="fas fa-microphone"></i>
+            <i id="muteIcon" class="fas fa-microphone"></i>
         </button>
         
         <button class="btn-circle btn-hangup" id="hangupBtn" title="End Call">
