--- a/collab-system-fe/login.html
+++ b/collab-system-fe/login.html
@@ -34,7 +34,7 @@
       </form>
 
       <div class="mt-4">
-        <a href="#" class="text-decoration-none small text-primary">Forgot your password? Reset Password</a>
+        <a href="forgot-password.html" class="text-decoration-none small text-primary">Forgot your password? Reset Password</a>
       </div>
     </div>
   </div>
