final fix for chat and call

--- a/collab-system-fe/chat.html
+++ b/collab-system-fe/chat.html
@@ -5,6 +5,7 @@
     <title>Team Chat</title>
     <link href="../../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="../../css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/chat.css">
 </head>
 <body>
@@ -74,6 +75,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="../../vendor/jquery/jquery.min.js"></script>
 <script src="../../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
 <script type="module" src="js/pages/chat/chat.js"></script>
 
 </body>
