--- a/collab-system-fe/reset-password.html
+++ b/collab-system-fe/reset-password.html
@@ -62,6 +62,6 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
-    <script src="js/pages/password/reset-password.js"></script>
+    <script type = "module" src="js/pages/password/reset-password.js"></script>
 </body>
 </html>
