--- a/collab-system-fe/index.html
+++ b/collab-system-fe/index.html
@@ -218,7 +218,7 @@
               <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
               <button
                 class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"
-                onclick="loadDashboardStats()"
+                onclick="reloadDashboard()"
               >
                 <i class="fas fa-sync fa-sm text-white-50"></i> Refresh Stats
               </button>
