--- a/collab-system-fe/verify-otp.html
+++ b/collab-system-fe/verify-otp.html
@@ -19,7 +19,7 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
-
+    <link href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css" rel="stylesheet">
 </head>
 <body class="bg-gradient-primary">
 <div class="container">
@@ -64,7 +64,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
     <script  type = "module" src="js/pages/password/verify-otp.js"></script>
 </body>
 </html>
