--- a/collab-system-fe/reset-password.html
+++ b/collab-system-fe/reset-password.html
@@ -19,7 +19,7 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
-
+     <link href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css" rel="stylesheet">
 </head>
 <body>
     <body class="bg-gradient-primary">
@@ -62,6 +62,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
     <script type = "module" src="js/pages/password/reset-password.js"></script>
 </body>
 </html>
