add search function

--- a/collab-system-fe/index.html
+++ b/collab-system-fe/index.html
@@ -61,6 +61,13 @@
         </li>
         <hr class="sidebar-divider d-none d-md-block" />
 
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">
+            <i class="fas fa-fw fa-info-circle"></i>
+            <span>About</span>
+          </a>
+        </li>
+        <hr class="sidebar-divider d-none d-md-block" />
         <div class="text-center d-none d-md-inline">
           <button class="rounded-circle border-0" id="sidebarToggle"></button>
         </div>
@@ -79,6 +86,7 @@
 
             <form
               class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
+              onsubmit="return false"
             >
               <div class="input-group">
                 <input
