--- a/collab-system-fe/about.html
+++ b/collab-system-fe/about.html
@@ -123,19 +123,36 @@
           <!-- Contact -->
           <div class="card shadow mb-4">
             <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">Contact Us</h6>
+              <h6 class="m-0 font-weight-bold text-primary">Contributors</h6>
             </div>
             <div class="card-body">
               <p class="text-gray-700 mb-2">
-                If you have questions, feedback, or suggestions, feel free to reach out:
+                This project is developed and maintained by:
               </p>
               <ul class="text-gray-700 mb-0">
-                <li>Email: <strong>phantrananhquan10@gmail.com</strong></li>
-                <li>GitHub: <strong>https://github.com/anhquan3107/collaborative-system</strong></li>
-                <li> IU University </li>
+                <li>
+                  <strong>Phan Tran Anh Quan</strong> —
+                  <a href="https://github.com/anhquan3107" target="_blank">
+                    https://github.com/anhquan3107
+                  </a>
+                </li>
+                <li>
+                  <strong>Nguyen Minh Quan</strong> —
+                  <a href="https://github.com/LavienR" target="_blank">
+                    https://github.com/LavienR
+                  </a>
+                </li>
+
+                <li>
+                  <strong>Source Code</strong> —
+                  <a href="https://github.com/anhquan3107/collaborative-system" target="_blank">
+                    https://github.com/anhquan3107/collaborative-system 
+                  </a>
+                </li>                
               </ul>
             </div>
           </div>
+
           <!-- Location -->
           <div class="card shadow mb-4">
             <div class="card-header py-3 d-flex align-items-center">
