fix whiteboard toolbar, invitations

--- a/collab-system-fe/project.html
+++ b/collab-system-fe/project.html
@@ -59,7 +59,7 @@
               style="min-width: 300px; max-height: 400px; overflow-y: auto"
             >
               <div class="p-2 text-center text-muted">
-                <small>Loading invitations...</small>
+                <small>Only owners can see pending invitations</small>
               </div>
             </div>
           </div>
